setting up profiles and added d3 js

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -7,7 +7,7 @@
 @import "superslides";
 @import "intermediates";
 @import "buttons";
-// @import "reset";
+@import "profiles";
 
 @mixin box_sizing {
     -moz-box-sizing: border-box;
