--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, @user.name) %>
+<% content_for :body_class, "user-profile user-profile--mobile" %>
+
 <div class="row">
   <aside class="span4">
     <section>
