--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -21,3 +21,5 @@ $grayMediumLight: #eaeaea;
 $dark-seafoam: #03a679;
 $clay: #DB704E;
 $tan: #FDE2C7;
+$midnight-blue: #14112c;
+$lavender: #817bdf;
