--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -15,13 +15,15 @@
 .profile-section {
     padding: 15px 0;
 }
-
+.profile__bottom {
+    height: 460px;
+}
 .profile__top {
     padding-top: 60px;
 }
 .profile__name {
     color: white;
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 300;
     margin-bottom: 0;
 }
@@ -36,7 +38,6 @@
     margin: auto;
     border-radius: 100%;
 }
-
 .inline-tout__item {
     display: block;
     width: 33%;
@@ -46,14 +47,18 @@
     position: relative;
 
     & + & {
-        border-left: 1px solid $white;
+        border-left: 1px solid $clouds;
     }
 }
 .inline-tout__sub-title {
     color: $white;
     font-size: 12px;
     margin: 0;
-    font-weight: 300;
+    // font-weight: 300;
+
+    .fa-info-circle {
+        margin-left: 5px;
+    }
 }
 .inline-tout__title {
     color: white;
@@ -61,3 +66,12 @@
     margin: 0 0 10px;
     font-weight: 300;
 }
+
+
+// Chart Styles
+  .legend {
+    font-size: 12px;
+  }
+  rect {
+    stroke-width: 2;
+  }
