--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -11,6 +11,15 @@
   <h1 class="leaderboard__title">Leaderboard</h1>
   <p class="leaderboard__subtitle"><%= @game.name %></p>
 </section>
+<% if @game.slug == "tap-color" %>
+  <div class="leaderboard__cat-wrapper">
+    <div class="leaderboard__cat">
+      <h2 class="cat-title tab-toggle ga-tab--alltime active" data-tab-cat=".leaderboard--all-time">Easy</h2>
+      <h2 class="cat-title tab-toggle ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Medium</h2>
+      <h2 class="cat-title tab-toggle ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Hard</h2>
+    </div>
+  </div>
+<% end %>
 
 <section class="leaderboard-head">
   <h1 class="leaderboard-head__title">Leaderboard</h1>
@@ -23,30 +32,106 @@
     <h2 class="cat-title tab-toggle ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Weekly</h2>
   </div>
 </div>
-<section class="game-leaderboard">
-  <div class="tab-section leaderboard leaderboard--all-time">
-    <ul class="list--leaderboard"></ul>
-    <% get_alltime_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
-    	<div class="leaderboard-row">
-        <span class="leaderboard-rank"><%= rank %></span>
-        <span class="leaderboard-user"><%= record[0] %></span>
-        <span class="leaderboard-score"><%= record[1] %></span>
-      </div>
-    <% end %>
-  </div>
 
-  <div class="tab-section leaderboard leaderboard--weekly hidden">
-    <ul class="list--leaderboard"></ul>
-    <% get_weekly_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
-      <div class="leaderboard-row">
-        <span class="leaderboard-rank"><%= rank %></span>
-        <span class="leaderboard-user"><%= record[0] %></span>
-        <span class="leaderboard-score"><%= record[1] %></span>
-      </div>
-    <% end %>
-  </div>
-</section>
+<% if @game.slug == 'tap-color' %>
+ <h2>EASY </h2>
+  <section class="game-leaderboard">
+    <div class="tab-section leaderboard leaderboard--all-time">
+      <ul class="list--leaderboard"></ul>
+      <% get_alltime_leaderboard({game_id: @game.id,version:1} ).each.with_index(1) do | record, rank | %>
+      	<div class="leaderboard-row">
+          <span class="leaderboard-rank"><%= rank %></span>
+          <span class="leaderboard-user"><%= record[0] %></span>
+          <span class="leaderboard-score"><%= record[1] %></span>
+        </div>
+      <% end %>
+    </div>
 
+    <div class="tab-section leaderboard leaderboard--weekly hidden">
+      <ul class="list--leaderboard"></ul>
+      <% get_weekly_leaderboard({game_id: @game.id,version:1} ).each.with_index(1) do | record, rank | %>
+        <div class="leaderboard-row">
+          <span class="leaderboard-rank"><%= rank %></span>
+          <span class="leaderboard-user"><%= record[0] %></span>
+          <span class="leaderboard-score"><%= record[1] %></span>
+        </div>
+      <% end %>
+    </div>
+  </section>
+ <h2>MEDIUM </h2>
+  <section class="game-leaderboard">
+    <div class="tab-section leaderboard leaderboard--all-time">
+      <ul class="list--leaderboard"></ul>
+      <% get_alltime_leaderboard({game_id: @game.id,version:2} ).each.with_index(1) do | record, rank | %>
+        <div class="leaderboard-row">
+          <span class="leaderboard-rank"><%= rank %></span>
+          <span class="leaderboard-user"><%= record[0] %></span>
+          <span class="leaderboard-score"><%= record[1] %></span>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="tab-section leaderboard leaderboard--weekly hidden">
+      <ul class="list--leaderboard"></ul>
+      <% get_weekly_leaderboard({game_id: @game.id,version:2} ).each.with_index(1) do | record, rank | %>
+        <div class="leaderboard-row">
+          <span class="leaderboard-rank"><%= rank %></span>
+          <span class="leaderboard-user"><%= record[0] %></span>
+          <span class="leaderboard-score"><%= record[1] %></span>
+        </div>
+      <% end %>
+    </div>
+  </section>
+   <h2>HARD </h2>
+  <section class="game-leaderboard">
+    <div class="tab-section leaderboard leaderboard--all-time">
+      <ul class="list--leaderboard"></ul>
+      <% get_alltime_leaderboard({game_id: @game.id,version:3} ).each.with_index(1) do | record, rank | %>
+        <div class="leaderboard-row">
+          <span class="leaderboard-rank"><%= rank %></span>
+          <span class="leaderboard-user"><%= record[0] %></span>
+          <span class="leaderboard-score"><%= record[1] %></span>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="tab-section leaderboard leaderboard--weekly hidden">
+      <ul class="list--leaderboard"></ul>
+      <% get_weekly_leaderboard({game_id: @game.id,version:3} ).each.with_index(1) do | record, rank | %>
+        <div class="leaderboard-row">
+          <span class="leaderboard-rank"><%= rank %></span>
+          <span class="leaderboard-user"><%= record[0] %></span>
+          <span class="leaderboard-score"><%= record[1] %></span>
+        </div>
+      <% end %>
+    </div>
+  </section>
+<% else %>
+  <section class="game-leaderboard">
+    <div class="tab-section leaderboard leaderboard--all-time">
+      <ul class="list--leaderboard"></ul>
+      <% get_alltime_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
+        <div class="leaderboard-row">
+          <span class="leaderboard-rank"><%= rank %></span>
+          <span class="leaderboard-user"><%= record[0] %></span>
+          <span class="leaderboard-score"><%= record[1] %></span>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="tab-section leaderboard leaderboard--weekly hidden">
+      <ul class="list--leaderboard"></ul>
+      <% get_weekly_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
+        <div class="leaderboard-row">
+          <span class="leaderboard-rank"><%= rank %></span>
+          <span class="leaderboard-user"><%= record[0] %></span>
+          <span class="leaderboard-score"><%= record[1] %></span>
+        </div>
+      <% end %>
+    </div>
+  </section>
+
+<% end %>
 
 <% if Rails.env.production? %>
   <!-- GA Tracking Events -->
