--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -124,6 +124,8 @@
             $('.js-key-color').each(function(i,val){
                 $(val).css('background-color', color_arr[i])
             });
+
+            $(".inline-tout__title").fitText(.5);
         });
 
     </script>
