--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -252,31 +252,31 @@
 
                 <div class="bottom-navigation bottom-navigation--mobile js-bottom-navigation">
                     <%= link_to games_path do %>
-                    <div class="bottom-nav__item active">
+                    <div class="bottom-nav__item <%= "active" if @current_page == "games" %>">
                         <p class="bottom-nav__item-copy"><img class="bottom-nav__img" src="/assets/navbar_2.png">Home</p>
                     </div>
                     <% end %>
 
                     <%= link_to surveys_path do %>
-                        <div class="bottom-nav__item">
+                        <div class="bottom-nav__item <%= "active" if @current_page == "surveys" %>">
                             <p class="bottom-nav__item-copy"><img class="bottom-nav__img" src="/assets/navbar_1.png">Surveys</p>
                         </div>
                     <% end %>
 
                     <%= link_to redeem_path do %>
-                        <div class="bottom-nav__item bottom-nav__item--primary">
+                        <div class="bottom-nav__item bottom-nav__item--primary <%= "active" if @current_page == "redeem" %>">
                             <p class="bottom-nav__item-copy"><img class="bottom-nav__img" src="/assets/navbar_3.png">Redeem</p>
                         </div>
                         <% end %>
 
                     <%= link_to leaderboards_path do %>
-                        <div class="bottom-nav__item bottom-nav__item--leaderboard">
+                        <div class="bottom-nav__item bottom-nav__item--leaderboard <%= "active" if @current_page == "leaderboard" %>">
                             <p class="bottom-nav__item-copy"><img class="bottom-nav__img" src="/assets/navbar_4.png">Leaders</p>
                         </div>
                     <% end %>
 
                     <%= link_to user_path(current_user.id) do %>
-                        <div class="bottom-nav__item">
+                        <div class="bottom-nav__item <%= "active" if @current_page == "profile" %>">
                             <p class="bottom-nav__item-copy"><img class="bottom-nav__img" src="/assets/navbar_5.png">Profile</p>
                         </div>
                     <% end %>
