removed confined profile styles

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -269,6 +269,9 @@ textarea {
 .bottom-nav__item--leaderboard {
     .bottom-nav__img {
         height: 17.5px;
+        position: relative;
+        top: 1px;
+        margin-bottom: 7px;
     }
 }
 
