--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -2,8 +2,8 @@
 
 .user-profile {
     padding-top: 0;
-    height: 100vh;
-    overflow-y: hidden;
+    // height: 100vh;
+    // overflow-y: hidden;
     .mobile-container {
         position: relative;
         background-image: url("/assets/profile_bg.jpg");
